fixed horizonal scroll on mobile, gave home icon some padding and made dropdown hamburger fit in blue navbar better

--- a/src/app/components/navbar-category-search/navbar-category-search.component.scss
+++ b/src/app/components/navbar-category-search/navbar-category-search.component.scss
@@ -155,8 +155,7 @@ $hellenicblue: rgb(0, 140, 255);
         visibility: visible;
         display: flex;
         height: 80px;
-        border: 5px;
-        
+        padding: 2px;
     }
     .category-bar {
         width: 100%!important;
@@ -168,5 +167,8 @@ $hellenicblue: rgb(0, 140, 255);
     .search-options {
         display: flex;
         height: 40px;
+    }
+    .dropdown {
+        padding: 18px 13px!important;
     }
 }
