--- a/src/app/components/slideshow/slideshow.component.scss
+++ b/src/app/components/slideshow/slideshow.component.scss
@@ -2,7 +2,7 @@
     background-color: #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 40vh;
     margin-left: auto;
     margin-right: auto;
@@ -45,9 +45,6 @@
 }
 
 @media screen and (max-width: 1079px) {
-    .slideshow-container {
-        width: 100%;
-    }
     .slide {
         width: 100%;
     }
